PWARE-67 Regulator users can continue to do all functions they could previously based on the roles they have in the regulator team (#49)
* PWARE-61 All logged in users will be able to view the people in their team(s)

* Replace TeamManagementService with TeamQueryService in SystemAreaAccessService and related tests

* PWARE-67 Regulator users can continue to do all functions they could previously based on the roles they have in the regulator team

* Fix tests

* refactor: rename method isPersonAsBuiltNotificationAdmin to isUserAsBuiltNotificationAdmin across the codebase

* checkstyle fix - format code for better readability in AsBuiltNotificationSubmissionController